src/css/less/component/loading.less
.tdb__loading{
    height: 100%;
    width: 100%;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    flex-direction:column;
    justify-content:center;
    padding-top: 40px;
    padding-bottom: 40px;
    background-color:rgba(255, 255, 255, 0.5);;
    zIndex:1000;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: hidden;
    top: 50%;
    left: 50%;
    position: fixed;
    transform: translate(-50%, -50%);

    /*
    * this is very important or not get the height and the width of the parent
    */
    &__parent{
      position: relative;
    }

    &__message{
      font-size:large;
      margin-bottom:20px;
      font-weight:bold;
    }
}

